Fix footer whitespace

--- a/_less/footer.less
+++ b/_less/footer.less
@@ -1,17 +1,17 @@
 #footer {
   text-align: center;
-	margin: 20px 0px 30px 0px;
+  margin: 20px 0px 30px 0px;
   .inner {
-  	font-size: 90%;
-  	display: inline-block;
+    font-size: 90%;
+    display: inline-block;
     a {
       color: @fontColour-default;
     }
     [class^="icon-"] {
-    	display: inline-block;
-    	transform: translateY(4px);
-    	margin: 0 3px 0 3px;
-    	font-size: 150%;
+      display: inline-block;
+      transform: translateY(4px);
+      margin: 0 3px;
+      font-size: 150%;
     }
   }
 }
